--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 lazy_static = "1.4"
 dirs = "5.0"
+futures-util = "0.3"
 
 [features]
 default = ["custom-protocol"]
